force-app/main/default/objects/Account/fields/Nombre_de_via_FISCAL__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_via_FISCAL__c</fullName>
    <label>Nombre de vía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>