force-app/main/default/objects/Account/fields/Nombre_del_notario__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_notario__c</fullName>
    <label>Nombre del notario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>