force-app/main/default/objects/Account/fields/NombreContacto__c.field-meta.xml
<CustomField>
    <fullName>NombreContacto__c</fullName>
    <label>Nombre del contacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>