force-app/main/default/objects/Account/fields/Numero_protocolo_contacto__c.field-meta.xml
<CustomField>
    <fullName>Numero_protocolo_contacto__c</fullName>
    <description>Número protocolo actualizado desde el objeto campo</description>
    <label>Número protocolo contacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>