force-app/main/default/objects/Account/fields/NumeroVia2Text__c.field-meta.xml
<CustomField>
    <fullName>NumeroVia2Text__c</fullName>
    <label>Numero Via 2</label>
    <length>32</length>
    <type>Text</type>
</CustomField>