force-app/main/default/objects/Account/fields/NumeroViaFiscalText__c.field-meta.xml
<CustomField>
    <fullName>NumeroViaFiscalText__c</fullName>
    <label>Nº Vía</label>
    <length>128</length>
    <type>Text</type>
</CustomField>