force-app/main/default/objects/Account/fields/Oficina__c.field-meta.xml
<CustomField>
    <fullName>Oficina__c</fullName>
    <formula>MID( N_cuenta_corriente__c, 11, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oficina</label>
    <type>Text</type>
</CustomField>