force-app/main/default/objects/Account/fields/Pais_FISCAL__c.field-meta.xml
<CustomField>
    <fullName>Pais_FISCAL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Cuentas (País)</relationshipLabel>
    <relationshipName>Cuentas3</relationshipName>
    <type>Lookup</type>
</CustomField>