force-app/main/default/objects/Account/fields/Porcentaje_hipoteca__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_hipoteca__c</fullName>
    <label>Porcentaje hipoteca</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>