force-app/main/default/objects/Account/fields/Proposito_compra__c.field-meta.xml
<CustomField>
    <fullName>Proposito_compra__c</fullName>
    <label>Proposito de compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inversión</fullName>
            </value>
            <value>
                <fullName>Vivienda habitual</fullName>
            </value>
            <value>
                <fullName>Segunda residencia</fullName>
            </value>
            <value>
                <fullName>Para un tercero (Hijo)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>