force-app/main/default/objects/Account/fields/Puerta_FISCAL__c.field-meta.xml
<CustomField>
    <fullName>Puerta_FISCAL__c</fullName>
    <label>Puerta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>