force-app/main/default/objects/Account/fields/Regimen__c.field-meta.xml
<CustomField>
    <fullName>Regimen__c</fullName>
    <label>Régimen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casado/a en régimen de gananciales</fullName>
            </value>
            <value>
                <fullName>Casado/a en separación de bienes</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Soltero/a</fullName>
            </value>
            <value>
                <fullName>Divorciado/a</fullName>
            </value>
            <value>
                <fullName>Casado en régimen de gananciales</fullName>
                <isActive>false</isActive>
                <label>Casado en régimen de gananciales</label>
            </value>
            <value>
                <fullName>Casado en separación de bienes</fullName>
                <isActive>false</isActive>
                <label>Casado en separación de bienes</label>
            </value>
            <value>
                <fullName>Divorciado</fullName>
                <isActive>false</isActive>
                <label>Divorciado</label>
            </value>
            <value>
                <fullName>Soltero</fullName>
                <isActive>false</isActive>
                <label>Soltero</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>