force-app/main/default/objects/Account/fields/Renta_anual__c.field-meta.xml
<CustomField>
    <fullName>Renta_anual__c</fullName>
    <label>Renta bruta anual/ cifra de negocio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>