force-app/main/default/objects/Account/fields/Respuesta_alta_PBC__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_alta_PBC__c</fullName>
    <label>Respuesta alta PBC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Respuesta_Alta_PBC</valueSetName>
    </valueSet>
</CustomField>