force-app/main/default/objects/Account/fields/Seccion__c.field-meta.xml
<CustomField>
    <fullName>Seccion__c</fullName>
    <label>Sección</label>
    <length>18</length>
    <type>Text</type>
</CustomField>