force-app/main/default/objects/Account/fields/Situacion_laboral__c.field-meta.xml
<CustomField>
    <fullName>Situacion_laboral__c</fullName>
    <defaultValue>&quot;SL009&quot;</defaultValue>
    <label>Situación laboral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Situacion_laboral</valueSetName>
    </valueSet>
</CustomField>