force-app/main/default/objects/Account/fields/tempLength__c.field-meta.xml
<CustomField>
    <fullName>tempLength__c</fullName>
    <formula>LEN( Localidad_Extranjera_F__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tempLength</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>