force-app/main/default/objects/Account/fields/Tipo_cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_cliente__c</fullName>
    <label>Tipo cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privado</fullName>
            </value>
            <value>
                <fullName>Público</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>