force-app/main/default/objects/Account/fields/Tipo_de_persona__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_persona__c</fullName>
    <formula>IF( RecordType.Name = &quot;Cuenta&quot;, &quot;Jurídica&quot;,
IF( RecordType.Name = &quot;Sociedad&quot;, &quot;Jurídica&quot;,
IF( RecordType.Name = &quot;Comercializadora&quot;, &quot;Jurídica&quot;,
IF( RecordType.Name = &quot;Cuenta personal&quot;, &quot;Física&quot;, null)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de persona</label>
    <type>Text</type>
</CustomField>