force-app/main/default/objects/Account/fields/Tipo_de_sociedad__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_sociedad__c</fullName>
    <label>Tipo de sociedad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_sociedad</valueSetName>
    </valueSet>
</CustomField>