force-app/main/default/objects/Account/fields/Tipo_de_via_FISCAL__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_via_FISCAL__c</fullName>
    <label>Tipo de vía</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_via</valueSetName>
    </valueSet>
</CustomField>