force-app/main/default/objects/Account/fields/Tomo__c.field-meta.xml
<CustomField>
    <fullName>Tomo__c</fullName>
    <label>Tomo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>