force-app/main/default/objects/Account/recordTypes/Cuenta.recordType-meta.xml
<RecordType>
    <fullName>Cuenta</fullName>
    <active>true</active>
    <label>Cliente Empresa</label>
</RecordType>