force-app/main/default/objects/Account/recordTypes/Sociedad.recordType-meta.xml
<RecordType>
    <fullName>Sociedad</fullName>
    <active>true</active>
    <label>Sociedad Promotora</label>
</RecordType>