force-app/main/default/objects/Account/recordTypes/Sociedad_Cooperativa.recordType-meta.xml
<RecordType>
    <fullName>Sociedad_Cooperativa</fullName>
    <active>true</active>
    <label>Sociedad Cooperativa</label>
</RecordType>