force-app/main/default/objects/Account/validationRules/Rellenar_direccion_principal.validationRule-meta.xml
<ValidationRule>
    <fullName>Rellenar_direccion_principal</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 

OR( 
RecordType.Name= &quot;Cliente Empresa&quot;, 
RecordType.Name= &quot;Cliente Personal&quot;), 

OR( 
 DP_Pais__r.Name = &quot;España&quot;, 
 DP_Pais__r.Name = &quot;&quot;), 

OR( 
ISBLANK( NumeroViaText__c ), 
ISBLANK(  DP_Nombre_via__c  ), 
ISBLANK (  DP_N_via__c ),
ISBLANK(  DP_Localidad__c ), 
ISBLANK(  DP_Codigo_postal__c ) 
) 
)</errorConditionFormula>
    <errorMessage>Introduzca el Domicilio principal: Tipo de vía, Nombre de vía, Nº de vía, Pais, Localidad y Código Postal.</errorMessage>
</ValidationRule>