force-app/main/default/objects/Account/validationRules/Rellenar_idioma.validationRule-meta.xml
<ValidationRule>
    <fullName>Rellenar_idioma</fullName>
    <active>false</active>
    <description>Debe indicarse un idioma si el contacto reside en el extranjero.</description>
    <errorConditionFormula>AND(IsPersonAccount == true,
ISPICKVAL( Idioma_contacto__pc,&quot;&quot;), NOT( DP_Pais__r.Name = &apos;España&apos;))</errorConditionFormula>
    <errorMessage>Debe rellenarse el idioma de contacto.</errorMessage>
</ValidationRule>