force-app/main/default/objects/Account/listViews/Clientes.listView-meta.xml
<ListView>
    <fullName>Clientes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Estado_comercial__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Cuenta</value>
    </filters>
    <label>Clientes</label>
</ListView>