force-app/main/default/objects/Account/listViews/Comercializadora.listView-meta.xml
<ListView>
    <fullName>Comercializadora</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Comercializadora</value>
    </filters>
    <label>Comercializadoras</label>
</ListView>