force-app/main/default/objects/Account/listViews/CUENTAS_RESERVA_MALILLA.listView-meta.xml
<ListView>
    <fullName>CUENTAS_RESERVA_MALILLA</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>CUENTAS_RESERVA_MALILLA</label>
</ListView>