force-app/main/default/objects/Account/listViews/Sociedades.listView-meta.xml
<ListView>
    <fullName>Sociedades</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Sociedad</value>
    </filters>
    <label>Sociedades</label>
</ListView>